<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_marginRight="5dp"
            android:textSize="@dimen/text_med"
            />
        <TextView
            android:id="@+id/status_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconected"
            android:textSize="@dimen/text_med"
            android:textColor="@color/red"/>
    </LinearLayout>

    <Button
        android:id="@+id/detect_light_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openDetect"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/change_lights_pattern_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/changePattern"
        android:visibility="gone"/>

    <Button
        android:id="@+id/config_bluetooth_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/ConfigBluetooth"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/connect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connect_btn"
            android:textSize="@dimen/text_med"
            android:background="@drawable/btn_background"
            android:backgroundTint="@color/green"
            android:padding="15dp"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/disconnect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/disconnect_btn"
            android:textSize="@dimen/text_med"
            android:background="@drawable/btn_background"
            android:backgroundTint="@color/red"
            android:padding="15dp"
            android:layout_margin="5dp"
            android:visibility="gone"
            />
    </LinearLayout>



</LinearLayout>